--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,7 @@
                 </ul>
             {% else %}
                 <ul>
+                    <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
                 </ul>
             {% endif %}
