--- a/authentication/templates/authentication/dashboard.html
+++ b/authentication/templates/authentication/dashboard.html
@@ -14,6 +14,9 @@
             <li><a href="{% url 'donor_list' %}">Donor List</a></li>
             <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'change_password' %}">Change Password</a></li>
+            <li><a href="{% url 'schedule_appointment' %}">Schedule Appointment</a></li>
+            <li><a href="{% url 'record_blood_donation' %}">Record Blood Donation</a></li>
         </ul>
     {% endif %}
 </body>
