--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>howdy</h1>
+    <li><a href="/future_donor">Future Donor</a></li>
     <li><a href="{% url 'login' %}"> Staff Login</a></li>
     
     <li><a href="/admin">Admin Login</a></li>
