--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             var elems = document.querySelectorAll('.datepicker');
             var options = {
-                format: 'yyyy-mm-dd',  // Adjust the date format as needed
+                format: 'yyyy-mm-dd',  
             };
             var instances = M.Datepicker.init(elems, options);
         });
