--- a/main_app/templates/main_app/confirmation_page.html
+++ b/main_app/templates/main_app/confirmation_page.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h2>Confirmation</h2>
-    <p>Thank you for scheduling an appointment. A confirmation email has been sent to your email address.</p>
+    <p>Thank you for scheduling an appointment. A confirmation email has been sent to your email address and a member of our team will reach out shortly.</p>
 {% endblock %}
