--- a/authentication/templates/authentication/dashboard.html
+++ b/authentication/templates/authentication/dashboard.html
@@ -20,6 +20,8 @@
             <li><a href="{% url 'blood_inventory_list' %}">Blood Inventory</a></li>
             <li><a href="{% url 'blood_shipment_list' %}">Distribution List</a></li>
             <li><a href="{% url 'initiate_blood_shipment' %}">Distribution</a></li>
+            <li><a href="{% url 'medical_journals' %}">Stay In The Know</a></li>
+            
             
             
             
