--- a/authentication/templates/authentication/blood_shipment_list.html
+++ b/authentication/templates/authentication/blood_shipment_list.html
@@ -3,7 +3,7 @@
 {% block title %}Blood Shipment List{% endblock %}
 
 {% block content %}
-    <h2>Blood Shipment List</h2>
+    <h2>Blood Distribution List</h2>
     <table>
         <thead>
             <tr>
