--- a/authentication/templates/authentication/initiate_blood_shipment.html
+++ b/authentication/templates/authentication/initiate_blood_shipment.html
@@ -3,7 +3,7 @@
 {% block title %}Initiate Blood Shipment{% endblock %}
 
 {% block content %}
-    <h2>Initiate Blood Shipment</h2>
+    <h2>Blood Distribution</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
