--- a/authentication/templates/authentication/dashboard.html
+++ b/authentication/templates/authentication/dashboard.html
@@ -45,19 +45,19 @@
             list-style: none;
             padding: 0;
             display: flex;
-            /* flex-wrap: wrap;
-            justify-content: space-between; */
-            column-count: 2;
-            column-gap: 20px;
+            flex-wrap: wrap;
         }
 
         li {
             margin-bottom: 10px;
+            flex-basis: 50%; 
         }
 
         a {
             text-decoration: none;
             color: white;
+            display: block;
+            
         }
     </style>
 </head>
