--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Blood Donation{% endblock %}</title>
-
+    <link rel="shortcut icon" href="#">
     <style>
         body {
             font-family: 'Arial', sans-serif;
