--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -52,15 +52,15 @@
     <h2>IMMUNOHEMATOLOGY SPECIAILITY SERVICES</h2>
     <ul>
         <li>
-            <img src="{% static 'assets/icon.png' %}" alt="Future Donor">
+            <img src="{% static 'Assets/icon.png' %}" alt="Future Donor">
             <a href="/future_donor">Future Donor</a>
         </li>
         <li>
-            <img src="{% static 'assets/icon.png' %}" alt="Staff Login">
+            <img src="{% static 'Assets/icon.png' %}" alt="Staff Login">
             <a href="{% url 'login' %}">Staff Login</a>
         </li>
         <li>
-            <img src="{% static 'assets/icon.png' %}" alt="Admin Login">
+            <img src="{% static 'Assets/icon.png' %}" alt="Admin Login">
             <a href="/admin">Admin Login</a>
         </li>
     </ul>
