--- a/authentication/templates/authentication/dashboard.html
+++ b/authentication/templates/authentication/dashboard.html
@@ -10,12 +10,14 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: black; /* Set a black background */
-            color: white; /* Set text color to white */
+            background-color: black; 
+            color: white; 
         }
 
-        h2 {
-            margin-left: 20px; /* Adjust the margin as needed */
+        h1 {
+            /* margin-left: 20px;  */
+            text-align: center;
+            
         }
 
         .main-container {
@@ -57,7 +59,16 @@
             text-decoration: none;
             color: white;
             display: block;
-            
+            padding: 10px;
+            background-color: #595858; 
+            border: 2px solid #ddd; 
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            cursor: pointer;
+            width: 80%; 
+            box-sizing: border-box; 
         }
     </style>
 </head>
@@ -79,8 +90,13 @@
                     <li><a href="{% url 'blood_shipment_list' %}">Distribution List</a></li>
                     <li><a href="{% url 'change_password' %}">Change Password</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
-                </ul>
+
+            {% else %}
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                
             {% endif %}
+                </ul>
         </div>
     </div>
 </body>
