--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -12,6 +12,7 @@
         }
 
         h1 {
+            margin-top: 90px;
             margin-bottom: 10px;
             color: white;
             
@@ -29,21 +30,21 @@
         li {
             display: inline-block;
             margin: 0 10px;
-            background-color: white;
-            /* border: 3px solid rgb(129, 2, 2);  */
+            background-color: rgb(167, 166, 166);
             padding: 10px;
-            color: white;
-            
-            
-            
+            color: rgb(0, 0, 0);
+            text-align: center; 
+            border-radius: 50%; 
+            overflow: hidden; 
         }
 
         img {
-            max-width: 300px; 
-            max-height: 300px; 
+            max-width: 300px;
+            max-height: 300px;
             display: block;
             margin: 0 auto;
             background-color: #ffffff;
+            border-radius: 50%; 
         }
     </style>
 </head>
